--- a/IfYes/style.css
+++ b/IfYes/style.css
@@ -56,7 +56,7 @@
 }
 }
 
-.surat {
+.Surat {
     position: relative;
     max-width: 800px;
     margin: 80px auto;
@@ -68,11 +68,33 @@
     z-index: 10;
 }
 
-.surat h1 {
+.Surat h1 {
     font-size: 17px;
     text-align: center;
     margin-bottom: 20px;
     color: #8b0036;
     text-shadow: 2px 2px 8px rgba(255, 255, 255, 0.6);
     animation: pulse 2s infinite;
+}
+
+.Surat p {
+    font-size: 17px;
+    line-height: 1.8;
+    color: #4a001f;
+    text-align: justify;
+    background: rgba(255, 255, 255, 0.4);
+    padding: 20px;
+    border-radius: 15px;
+}
+
+@keyframes pulse {
+0% {
+    transform: scale(1);
+}
+50% {
+    transform: scale(1.03);
+}
+100% {
+    transform: scale(1);
+}
 }
